--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha --require test/setup.js",
     "start": "node src/server.js",
     "predeploy": "npm audit && npm run migrate:production",
-    "deploy": "git push heroku master",
+    "deploy": "git push heroku main",
     "dev": "nodemon src/server.js",
     "migrate": "postgrator --config postgrator-config.js",
     "migrate:test": "env NODE_ENV=test npm run migrate",
