--- a/package.json
+++ b/package.json
@@ -21,22 +21,25 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^7.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^3.23.3",
-    "knex": "^0.19.5",
+    "express-jwt": "^6.0.0",
+    "express-jwt-authz": "^2.4.1",
+    "helmet": "^4.4.1",
+    "jwks-rsa": "^1.12.3",
+    "knex": "^0.95.1",
     "morgan": "^1.10.0",
-    "pg": "^7.18.2",
-    "uuid": "^3.4.0",
+    "pg": "^8.5.1",
+    "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "xss": "^1.0.8"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^6.2.3",
-    "nodemon": "^1.19.4",
-    "postgrator-cli": "^3.3.0",
-    "supertest": "^4.0.2"
+    "chai": "^4.3.3",
+    "mocha": "^8.3.1",
+    "nodemon": "^2.0.7",
+    "postgrator-cli": "^4.0.0",
+    "supertest": "^6.1.3"
   },
   "directories": {
     "test": "test"
