--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "chai": "^4.3.3",
     "mocha": "^8.3.1",
+    "nock": "^13.0.11",
     "nodemon": "^2.0.7",
     "postgrator-cli": "^4.0.0",
     "supertest": "^6.1.3"
